Ready for Deploy

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
-  "ignoreCommand": "echo 'Use .vercelignore'"
+  "framework": "vite"
 }
