--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "react-dom": "^18.2.0",
     "vite": "^5.0.0",
     "react-icons": "^5.0.1",
-    "@resend/node": "^2.2.0"
+    "resend": "^4.0.0"
   }
 }
